Refactoring; added a struct to use as model instead of a dictionary.

--- a/TaskIt/Base.lproj/Main.storyboard
+++ b/TaskIt/Base.lproj/Main.storyboard
@@ -63,6 +63,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="Hyg-tY-yJh"/>
+                    <connections>
+                        <outlet property="tableView" destination="goM-L5-hnW" id="oqb-ER-8f6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
